[gd_scene load_steps=8 format=3 uid="uid://dedrie567uqc2"]

[ext_resource type="Script" path="res://src/entities/screen.gd" id="1_6syly"]
[ext_resource type="Material" uid="uid://gisbr8fpgcmb" path="res://materials/entities/submarine/screen_crt_shader.tres" id="3_nfrr3"]

[sub_resource type="Shader" id="Shader_sfcor"]
resource_local_to_scene = true
code = "shader_type spatial;
render_mode unshaded;

uniform sampler2D screen_tex;

void fragment()
{
	ALBEDO = texture(screen_tex, vec2(1.0 - UV.y, 1.0 - UV.x)).rgb;
	//EMISSION = texture(screen_tex, vec2(UV.x, 1.0 - UV.y)).rgb * 0.01;
}"

[sub_resource type="ViewportTexture" id="ViewportTexture_jw2yh"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ciopj"]
resource_local_to_scene = true
render_priority = 0
shader = SubResource("Shader_sfcor")
shader_parameter/screen_tex = SubResource("ViewportTexture_jw2yh")

[sub_resource type="ArrayMesh" id="ArrayMesh_5levh"]
_surfaces = [{
"aabb": AABB(-0.864391, -0.0388693, 1.33823, 0.401834, 0.307371, 0.42664),
"format": 34896613377,
"index_count": 240,
"index_data": PackedByteArray(50, 0, 3, 0, 17, 0, 50, 0, 18, 0, 3, 0, 25, 0, 11, 0, 1, 0, 25, 0, 26, 0, 11, 0, 26, 0, 12, 0, 11, 0, 26, 0, 30, 0, 12, 0, 30, 0, 13, 0, 12, 0, 30, 0, 34, 0, 13, 0, 34, 0, 14, 0, 13, 0, 34, 0, 38, 0, 14, 0, 38, 0, 15, 0, 14, 0, 38, 0, 42, 0, 15, 0, 42, 0, 16, 0, 15, 0, 42, 0, 46, 0, 16, 0, 46, 0, 17, 0, 16, 0, 46, 0, 50, 0, 17, 0, 9, 0, 53, 0, 49, 0, 9, 0, 10, 0, 53, 0, 49, 0, 52, 0, 48, 0, 49, 0, 53, 0, 52, 0, 48, 0, 51, 0, 47, 0, 48, 0, 52, 0, 51, 0, 47, 0, 50, 0, 46, 0, 47, 0, 51, 0, 50, 0, 8, 0, 49, 0, 45, 0, 8, 0, 9, 0, 49, 0, 45, 0, 48, 0, 44, 0, 45, 0, 49, 0, 48, 0, 44, 0, 47, 0, 43, 0, 44, 0, 48, 0, 47, 0, 43, 0, 46, 0, 42, 0, 43, 0, 47, 0, 46, 0, 7, 0, 45, 0, 41, 0, 7, 0, 8, 0, 45, 0, 41, 0, 44, 0, 40, 0, 41, 0, 45, 0, 44, 0, 40, 0, 43, 0, 39, 0, 40, 0, 44, 0, 43, 0, 39, 0, 42, 0, 38, 0, 39, 0, 43, 0, 42, 0, 6, 0, 41, 0, 37, 0, 6, 0, 7, 0, 41, 0, 37, 0, 40, 0, 36, 0, 37, 0, 41, 0, 40, 0, 36, 0, 39, 0, 35, 0, 36, 0, 40, 0, 39, 0, 35, 0, 38, 0, 34, 0, 35, 0, 39, 0, 38, 0, 5, 0, 37, 0, 33, 0, 5, 0, 6, 0, 37, 0, 33, 0, 36, 0, 32, 0, 33, 0, 37, 0, 36, 0, 32, 0, 35, 0, 31, 0, 32, 0, 36, 0, 35, 0, 31, 0, 34, 0, 30, 0, 31, 0, 35, 0, 34, 0, 4, 0, 33, 0, 29, 0, 4, 0, 5, 0, 33, 0, 29, 0, 32, 0, 28, 0, 29, 0, 33, 0, 32, 0, 28, 0, 31, 0, 27, 0, 28, 0, 32, 0, 31, 0, 27, 0, 30, 0, 26, 0, 27, 0, 31, 0, 30, 0, 0, 0, 29, 0, 22, 0, 0, 0, 4, 0, 29, 0, 22, 0, 28, 0, 23, 0, 22, 0, 29, 0, 28, 0, 23, 0, 27, 0, 24, 0, 23, 0, 28, 0, 27, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 10, 0, 21, 0, 53, 0, 10, 0, 2, 0, 21, 0, 53, 0, 20, 0, 52, 0, 53, 0, 21, 0, 20, 0, 52, 0, 19, 0, 51, 0, 52, 0, 20, 0, 19, 0, 51, 0, 18, 0, 50, 0, 51, 0, 19, 0, 18, 0),
"lods": [0.00894032, PackedByteArray(50, 0, 3, 0, 17, 0, 50, 0, 18, 0, 3, 0, 19, 0, 18, 0, 50, 0, 46, 0, 50, 0, 17, 0, 46, 0, 17, 0, 16, 0, 46, 0, 16, 0, 15, 0, 46, 0, 15, 0, 14, 0, 47, 0, 50, 0, 46, 0, 47, 0, 19, 0, 50, 0, 30, 0, 46, 0, 14, 0, 30, 0, 14, 0, 13, 0, 30, 0, 13, 0, 12, 0, 25, 0, 30, 0, 12, 0, 25, 0, 12, 0, 11, 0, 25, 0, 11, 0, 1, 0, 24, 0, 30, 0, 25, 0, 31, 0, 46, 0, 30, 0, 24, 0, 31, 0, 30, 0, 31, 0, 47, 0, 46, 0, 23, 0, 31, 0, 24, 0, 32, 0, 47, 0, 31, 0, 23, 0, 32, 0, 31, 0, 48, 0, 19, 0, 47, 0, 48, 0, 20, 0, 19, 0, 32, 0, 44, 0, 47, 0, 44, 0, 48, 0, 47, 0, 29, 0, 32, 0, 23, 0, 22, 0, 29, 0, 23, 0, 0, 0, 29, 0, 22, 0, 0, 0, 4, 0, 29, 0, 29, 0, 33, 0, 32, 0, 4, 0, 33, 0, 29, 0, 33, 0, 44, 0, 32, 0, 4, 0, 5, 0, 33, 0, 5, 0, 6, 0, 33, 0, 6, 0, 7, 0, 33, 0, 33, 0, 49, 0, 44, 0, 7, 0, 49, 0, 33, 0, 49, 0, 48, 0, 44, 0, 7, 0, 8, 0, 49, 0, 49, 0, 20, 0, 48, 0, 8, 0, 9, 0, 49, 0, 49, 0, 53, 0, 20, 0, 9, 0, 53, 0, 49, 0, 53, 0, 21, 0, 20, 0, 9, 0, 10, 0, 53, 0, 10, 0, 21, 0, 53, 0, 10, 0, 2, 0, 21, 0), 0.0339093, PackedByteArray(18, 0, 3, 0, 17, 0, 15, 0, 18, 0, 17, 0, 15, 0, 17, 0, 16, 0, 9, 0, 18, 0, 15, 0, 9, 0, 19, 0, 18, 0, 9, 0, 20, 0, 19, 0, 9, 0, 21, 0, 20, 0, 10, 0, 2, 0, 21, 0, 9, 0, 10, 0, 21, 0, 12, 0, 9, 0, 15, 0, 12, 0, 15, 0, 14, 0, 12, 0, 14, 0, 13, 0, 7, 0, 8, 0, 9, 0, 7, 0, 9, 0, 5, 0, 5, 0, 9, 0, 12, 0, 6, 0, 7, 0, 5, 0, 0, 0, 4, 0, 5, 0, 0, 0, 5, 0, 22, 0, 22, 0, 5, 0, 23, 0, 5, 0, 12, 0, 23, 0, 23, 0, 12, 0, 24, 0, 24, 0, 12, 0, 25, 0, 25, 0, 12, 0, 11, 0, 25, 0, 11, 0, 1, 0)],
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 54,
"vertex_data": PackedByteArray(63, 16, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 76, 14, 0, 0, 255, 255, 0, 0, 178, 241, 0, 0, 191, 239, 255, 255, 255, 255, 0, 0, 114, 38, 0, 0, 12, 37, 0, 0, 154, 64, 0, 0, 157, 70, 0, 0, 204, 92, 0, 0, 99, 102, 0, 0, 57, 122, 0, 0, 19, 133, 0, 0, 188, 152, 0, 0, 208, 162, 0, 0, 122, 184, 0, 0, 118, 191, 0, 0, 65, 218, 0, 0, 83, 218, 0, 0, 50, 22, 255, 255, 89, 51, 0, 0, 91, 48, 255, 255, 233, 84, 0, 0, 140, 76, 255, 255, 175, 116, 0, 0, 250, 105, 255, 255, 95, 147, 0, 0, 124, 136, 255, 255, 28, 177, 0, 0, 58, 168, 255, 255, 195, 205, 0, 0, 2, 202, 255, 255, 159, 232, 0, 0, 255, 242, 203, 204, 34, 253, 0, 0, 63, 246, 152, 153, 70, 250, 0, 0, 127, 249, 101, 102, 106, 247, 0, 0, 191, 252, 50, 51, 142, 244, 0, 0, 255, 12, 50, 51, 220, 2, 0, 0, 191, 9, 102, 102, 184, 5, 0, 0, 127, 6, 152, 153, 148, 8, 0, 0, 63, 3, 203, 204, 112, 11, 0, 0, 124, 34, 203, 204, 249, 39, 0, 0, 75, 41, 152, 153, 195, 33, 0, 0, 139, 44, 101, 102, 231, 30, 0, 0, 248, 43, 50, 51, 165, 31, 0, 0, 253, 64, 203, 204, 114, 69, 0, 0, 238, 70, 152, 153, 13, 64, 0, 0, 46, 74, 101, 102, 49, 61, 0, 0, 189, 74, 50, 51, 222, 60, 0, 0, 47, 93, 203, 204, 56, 101, 0, 0, 32, 99, 152, 153, 211, 95, 0, 0, 96, 102, 101, 102, 247, 92, 0, 0, 238, 102, 50, 51, 164, 92, 0, 0, 156, 122, 203, 204, 232, 131, 0, 0, 141, 128, 152, 153, 131, 126, 0, 0, 205, 131, 101, 102, 167, 123, 0, 0, 92, 132, 50, 51, 84, 123, 0, 0, 31, 153, 203, 204, 165, 161, 0, 0, 16, 159, 152, 153, 63, 156, 0, 0, 80, 162, 101, 102, 99, 153, 0, 0, 222, 162, 50, 51, 17, 153, 0, 0, 221, 184, 203, 204, 75, 190, 0, 0, 206, 190, 152, 153, 230, 184, 0, 0, 14, 194, 101, 102, 10, 182, 0, 0, 156, 194, 50, 51, 183, 181, 0, 0, 76, 214, 203, 204, 63, 221, 0, 0, 26, 221, 152, 153, 9, 215, 0, 0, 90, 224, 101, 102, 45, 212, 0, 0, 199, 223, 50, 51, 235, 212, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_8ktsl"]
resource_name = "submarine_screen_sub_screen_mesh"
_surfaces = [{
"aabb": AABB(-0.864391, -0.0388693, 1.33823, 0.401834, 0.307371, 0.42664),
"attribute_data": PackedByteArray(200, 0, 0, 0, 253, 253, 0, 0, 200, 0, 253, 253, 253, 253, 253, 253, 200, 0, 207, 31, 200, 0, 102, 63, 200, 0, 13, 95, 200, 0, 168, 126, 200, 0, 67, 158, 200, 0, 234, 189, 200, 0, 176, 221, 253, 253, 207, 31, 253, 253, 102, 63, 253, 253, 13, 95, 253, 253, 168, 126, 253, 253, 67, 158, 253, 253, 234, 189, 253, 253, 176, 221, 156, 199, 253, 253, 202, 149, 253, 253, 162, 100, 253, 253, 182, 51, 253, 253, 182, 51, 0, 0, 162, 100, 0, 0, 202, 149, 0, 0, 156, 199, 0, 0, 156, 199, 207, 31, 202, 149, 207, 31, 162, 100, 207, 31, 182, 51, 207, 31, 156, 199, 102, 63, 202, 149, 102, 63, 162, 100, 102, 63, 182, 51, 102, 63, 156, 199, 13, 95, 202, 149, 13, 95, 162, 100, 13, 95, 182, 51, 13, 95, 156, 199, 168, 126, 202, 149, 168, 126, 162, 100, 168, 126, 182, 51, 168, 126, 156, 199, 67, 158, 202, 149, 67, 158, 162, 100, 67, 158, 182, 51, 67, 158, 156, 199, 234, 189, 202, 149, 234, 189, 162, 100, 234, 189, 182, 51, 234, 189, 156, 199, 176, 221, 202, 149, 176, 221, 162, 100, 176, 221, 182, 51, 176, 221),
"format": 34896613399,
"index_count": 240,
"index_data": PackedByteArray(50, 0, 3, 0, 17, 0, 50, 0, 18, 0, 3, 0, 25, 0, 11, 0, 1, 0, 25, 0, 26, 0, 11, 0, 26, 0, 12, 0, 11, 0, 26, 0, 30, 0, 12, 0, 30, 0, 13, 0, 12, 0, 30, 0, 34, 0, 13, 0, 34, 0, 14, 0, 13, 0, 34, 0, 38, 0, 14, 0, 38, 0, 15, 0, 14, 0, 38, 0, 42, 0, 15, 0, 42, 0, 16, 0, 15, 0, 42, 0, 46, 0, 16, 0, 46, 0, 17, 0, 16, 0, 46, 0, 50, 0, 17, 0, 9, 0, 53, 0, 49, 0, 9, 0, 10, 0, 53, 0, 49, 0, 52, 0, 48, 0, 49, 0, 53, 0, 52, 0, 48, 0, 51, 0, 47, 0, 48, 0, 52, 0, 51, 0, 47, 0, 50, 0, 46, 0, 47, 0, 51, 0, 50, 0, 8, 0, 49, 0, 45, 0, 8, 0, 9, 0, 49, 0, 45, 0, 48, 0, 44, 0, 45, 0, 49, 0, 48, 0, 44, 0, 47, 0, 43, 0, 44, 0, 48, 0, 47, 0, 43, 0, 46, 0, 42, 0, 43, 0, 47, 0, 46, 0, 7, 0, 45, 0, 41, 0, 7, 0, 8, 0, 45, 0, 41, 0, 44, 0, 40, 0, 41, 0, 45, 0, 44, 0, 40, 0, 43, 0, 39, 0, 40, 0, 44, 0, 43, 0, 39, 0, 42, 0, 38, 0, 39, 0, 43, 0, 42, 0, 6, 0, 41, 0, 37, 0, 6, 0, 7, 0, 41, 0, 37, 0, 40, 0, 36, 0, 37, 0, 41, 0, 40, 0, 36, 0, 39, 0, 35, 0, 36, 0, 40, 0, 39, 0, 35, 0, 38, 0, 34, 0, 35, 0, 39, 0, 38, 0, 5, 0, 37, 0, 33, 0, 5, 0, 6, 0, 37, 0, 33, 0, 36, 0, 32, 0, 33, 0, 37, 0, 36, 0, 32, 0, 35, 0, 31, 0, 32, 0, 36, 0, 35, 0, 31, 0, 34, 0, 30, 0, 31, 0, 35, 0, 34, 0, 4, 0, 33, 0, 29, 0, 4, 0, 5, 0, 33, 0, 29, 0, 32, 0, 28, 0, 29, 0, 33, 0, 32, 0, 28, 0, 31, 0, 27, 0, 28, 0, 32, 0, 31, 0, 27, 0, 30, 0, 26, 0, 27, 0, 31, 0, 30, 0, 0, 0, 29, 0, 22, 0, 0, 0, 4, 0, 29, 0, 22, 0, 28, 0, 23, 0, 22, 0, 29, 0, 28, 0, 23, 0, 27, 0, 24, 0, 23, 0, 28, 0, 27, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 10, 0, 21, 0, 53, 0, 10, 0, 2, 0, 21, 0, 53, 0, 20, 0, 52, 0, 53, 0, 21, 0, 20, 0, 52, 0, 19, 0, 51, 0, 52, 0, 20, 0, 19, 0, 51, 0, 18, 0, 50, 0, 51, 0, 19, 0, 18, 0),
"lods": [0.00894032, PackedByteArray(50, 0, 3, 0, 17, 0, 50, 0, 18, 0, 3, 0, 19, 0, 18, 0, 50, 0, 46, 0, 50, 0, 17, 0, 46, 0, 17, 0, 16, 0, 46, 0, 16, 0, 15, 0, 46, 0, 15, 0, 14, 0, 47, 0, 50, 0, 46, 0, 47, 0, 19, 0, 50, 0, 30, 0, 46, 0, 14, 0, 30, 0, 14, 0, 13, 0, 30, 0, 13, 0, 12, 0, 25, 0, 30, 0, 12, 0, 25, 0, 12, 0, 11, 0, 25, 0, 11, 0, 1, 0, 24, 0, 30, 0, 25, 0, 31, 0, 46, 0, 30, 0, 24, 0, 31, 0, 30, 0, 31, 0, 47, 0, 46, 0, 23, 0, 31, 0, 24, 0, 32, 0, 47, 0, 31, 0, 23, 0, 32, 0, 31, 0, 48, 0, 19, 0, 47, 0, 48, 0, 20, 0, 19, 0, 32, 0, 44, 0, 47, 0, 44, 0, 48, 0, 47, 0, 29, 0, 32, 0, 23, 0, 22, 0, 29, 0, 23, 0, 0, 0, 29, 0, 22, 0, 0, 0, 4, 0, 29, 0, 29, 0, 33, 0, 32, 0, 4, 0, 33, 0, 29, 0, 33, 0, 44, 0, 32, 0, 4, 0, 5, 0, 33, 0, 5, 0, 6, 0, 33, 0, 6, 0, 7, 0, 33, 0, 33, 0, 49, 0, 44, 0, 7, 0, 49, 0, 33, 0, 49, 0, 48, 0, 44, 0, 7, 0, 8, 0, 49, 0, 49, 0, 20, 0, 48, 0, 8, 0, 9, 0, 49, 0, 49, 0, 53, 0, 20, 0, 9, 0, 53, 0, 49, 0, 53, 0, 21, 0, 20, 0, 9, 0, 10, 0, 53, 0, 10, 0, 21, 0, 53, 0, 10, 0, 2, 0, 21, 0), 0.0339093, PackedByteArray(18, 0, 3, 0, 17, 0, 15, 0, 18, 0, 17, 0, 15, 0, 17, 0, 16, 0, 9, 0, 18, 0, 15, 0, 9, 0, 19, 0, 18, 0, 9, 0, 20, 0, 19, 0, 9, 0, 21, 0, 20, 0, 10, 0, 2, 0, 21, 0, 9, 0, 10, 0, 21, 0, 12, 0, 9, 0, 15, 0, 12, 0, 15, 0, 14, 0, 12, 0, 14, 0, 13, 0, 7, 0, 8, 0, 9, 0, 7, 0, 9, 0, 5, 0, 5, 0, 9, 0, 12, 0, 6, 0, 7, 0, 5, 0, 0, 0, 4, 0, 5, 0, 0, 0, 5, 0, 22, 0, 22, 0, 5, 0, 23, 0, 5, 0, 12, 0, 23, 0, 23, 0, 12, 0, 24, 0, 24, 0, 12, 0, 25, 0, 25, 0, 12, 0, 11, 0, 25, 0, 11, 0, 1, 0)],
"material": SubResource("ShaderMaterial_ciopj"),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 54,
"vertex_data": PackedByteArray(63, 16, 0, 0, 0, 0, 86, 27, 0, 0, 255, 255, 76, 14, 1, 18, 255, 255, 0, 0, 178, 241, 194, 21, 191, 239, 255, 255, 255, 255, 46, 13, 114, 38, 0, 0, 12, 37, 246, 29, 154, 64, 0, 0, 157, 70, 90, 33, 204, 92, 0, 0, 99, 102, 229, 33, 57, 122, 0, 0, 19, 133, 224, 32, 188, 152, 0, 0, 208, 162, 219, 31, 122, 184, 0, 0, 118, 191, 124, 30, 65, 218, 0, 0, 83, 218, 189, 25, 50, 22, 255, 255, 89, 51, 8, 14, 91, 48, 255, 255, 233, 84, 187, 9, 140, 76, 255, 255, 175, 116, 136, 8, 250, 105, 255, 255, 95, 147, 214, 7, 124, 136, 255, 255, 28, 177, 35, 7, 58, 168, 255, 255, 195, 205, 169, 7, 2, 202, 255, 255, 159, 232, 224, 10, 255, 242, 203, 204, 34, 253, 34, 17, 63, 246, 152, 153, 70, 250, 162, 22, 127, 249, 101, 102, 106, 247, 139, 24, 191, 252, 50, 51, 142, 244, 71, 23, 255, 12, 50, 51, 220, 2, 63, 23, 191, 9, 102, 102, 184, 5, 135, 17, 127, 6, 152, 153, 148, 8, 174, 15, 63, 3, 203, 204, 112, 11, 230, 16, 124, 34, 203, 204, 249, 39, 82, 15, 75, 41, 152, 153, 195, 33, 39, 17, 139, 44, 101, 102, 231, 30, 159, 19, 248, 43, 50, 51, 165, 31, 124, 25, 253, 64, 203, 204, 114, 69, 223, 13, 238, 70, 152, 153, 13, 64, 101, 19, 46, 74, 101, 102, 49, 61, 90, 22, 189, 74, 50, 51, 222, 60, 146, 28, 47, 93, 203, 204, 56, 101, 118, 13, 32, 99, 152, 153, 211, 95, 182, 19, 96, 102, 101, 102, 247, 92, 118, 22, 238, 102, 50, 51, 164, 92, 254, 28, 156, 122, 203, 204, 232, 131, 165, 12, 141, 128, 152, 153, 131, 126, 200, 18, 205, 131, 101, 102, 167, 123, 127, 21, 92, 132, 50, 51, 84, 123, 247, 27, 31, 153, 203, 204, 165, 161, 213, 11, 16, 159, 152, 153, 63, 156, 217, 17, 80, 162, 101, 102, 99, 153, 134, 20, 222, 162, 50, 51, 17, 153, 240, 26, 221, 184, 203, 204, 75, 190, 46, 12, 206, 190, 152, 153, 230, 184, 249, 17, 14, 194, 101, 102, 10, 182, 238, 20, 156, 194, 50, 51, 183, 181, 143, 26, 76, 214, 203, 204, 63, 221, 253, 14, 26, 221, 152, 153, 9, 215, 151, 20, 90, 224, 101, 102, 45, 212, 61, 23, 199, 223, 50, 51, 235, 212, 19, 25, 113, 51, 34, 52, 30, 51, 29, 46, 251, 53, 207, 54, 213, 53, 12, 48, 37, 52, 8, 55, 122, 52, 16, 59, 161, 52, 60, 60, 229, 52, 218, 60, 41, 53, 121, 61, 69, 53, 187, 60, 129, 53, 73, 57, 77, 51, 111, 44, 175, 51, 44, 42, 244, 51, 189, 41, 139, 52, 231, 41, 34, 53, 19, 42, 105, 53, 181, 42, 188, 53, 106, 45, 146, 52, 211, 47, 189, 50, 14, 48, 219, 50, 80, 49, 148, 52, 148, 52, 161, 52, 144, 52, 158, 54, 82, 52, 155, 54, 239, 50, 200, 52, 229, 47, 124, 52, 159, 46, 165, 53, 245, 49, 151, 53, 230, 51, 171, 52, 233, 53, 241, 51, 255, 44, 59, 52, 203, 48, 80, 52, 235, 50, 110, 52, 98, 55, 251, 51, 186, 44, 25, 52, 200, 48, 45, 52, 178, 50, 105, 52, 188, 55, 143, 52, 255, 44, 161, 52, 40, 49, 171, 52, 32, 51, 202, 52, 72, 56, 38, 53, 63, 45, 40, 53, 138, 49, 41, 53, 142, 51, 42, 53, 213, 56, 42, 53, 133, 45, 8, 53, 96, 49, 8, 53, 140, 51, 40, 53, 122, 56, 170, 52, 184, 46, 156, 51, 150, 48, 215, 51, 67, 50, 212, 52, 41, 54)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_5levh")

[node name="Screen" type="Node3D"]
script = ExtResource("1_6syly")

[node name="sub_screen" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_8ktsl")
skeleton = NodePath("")

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
size = Vector2i(950, 700)
render_target_update_mode = 4

[node name="ScreenControl" type="Control" parent="SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SubViewport/ScreenControl"]
layout_mode = 1
offset_right = 53.0
offset_bottom = 23.0
scale = Vector2(4, 4)
theme_override_font_sizes/font_size = 9
text = "Port"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRectCRT" type="ColorRect" parent="SubViewport/ScreenControl"]
material = ExtResource("3_nfrr3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Node3DCameras" type="Node3D" parent="SubViewport"]

[node name="Camera3DPort" type="Camera3D" parent="SubViewport/Node3DCameras"]
current = true

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewport/Node3DCameras/Camera3DPort"]
visible = false
light_energy = 20.0
shadow_enabled = true
spot_range = 1000.0

[node name="Camera3DStarboard" type="Camera3D" parent="SubViewport/Node3DCameras"]
current = true

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewport/Node3DCameras/Camera3DStarboard"]
visible = false
light_energy = 20.0
shadow_enabled = true
spot_range = 1000.0

[node name="Camera3DStern" type="Camera3D" parent="SubViewport/Node3DCameras"]

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewport/Node3DCameras/Camera3DStern"]
visible = false
light_energy = 20.0
shadow_enabled = true
spot_range = 1000.0

[node name="Camera3DFloor" type="Camera3D" parent="SubViewport/Node3DCameras"]

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewport/Node3DCameras/Camera3DFloor"]
visible = false
light_energy = 20.0
shadow_enabled = true
spot_range = 1000.0

[node name="Camera3DRoof" type="Camera3D" parent="SubViewport/Node3DCameras"]

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewport/Node3DCameras/Camera3DRoof"]
visible = false
light_energy = 20.0
shadow_enabled = true
spot_range = 1000.0

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.518994, 0.132906, 1.43791)
light_energy = 0.005
shadow_enabled = true
distance_fade_enabled = true
distance_fade_begin = 1.0
distance_fade_shadow = 3.0
distance_fade_length = 3.0
omni_range = 3.0
